<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- TextView with mixed/highlighted background color -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="416dp"
        android:layout_height="66dp"
        android:layout_marginTop="608dp"
        android:textColor="@color/designed_purple"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="@string/welcome_message_line1" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="86dp"
        android:textColor="@color/designed_purple"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="672dp"
        tools:text="@string/welcome_message_line2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="419dp"
        android:layout_height="80dp"
        android:layout_marginBottom="408dp"
        android:textColor="@color/designed_purple"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="@string/welcome_message_line3" />

</androidx.constraintlayout.widget.ConstraintLayout>